--- a/public/experience/index.html
+++ b/public/experience/index.html
@@ -855,11 +855,21 @@
             Present
           
         </time>
-        <div class="mb-4 text-base font-normal text-gray-500 dark:text-gray-300 prose prose-slate dark:prose-invert"><p>Courses included:</p>
+        <div class="mb-4 text-base font-normal text-gray-500 dark:text-gray-300 prose prose-slate dark:prose-invert"><p>Courses included:
+I am cuurently studying in Computer Science and Engineering at Jahangirnagar University.</p>
+<p>Courses included:</p>
 <ul>
-<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-</ul></div>
+<li>Structured Programming Language (C)</li>
+<li>Object Oriented Programming(C++,Java)</li>
+<li>Data Structures and Algorithms</li>
+<li>Data and Telecommunication</li>
+<li>Electrical and Electronics Circuit Design</li>
+<li>Database Management</li>
+<li>Web Development</li>
+<li>Computer Graphics</li>
+<li>Operating System</li>
+</ul>
+</div>
 
         
 
